# HPI

./: .gitignore  .gitmodules  .projectile  CHANGELOG.md  LICENSE  README.md  README.org  TODO.org  analyse.py  check  ci.sh  conftest.py  demo.py  fill_influxdb.py  lint  main.py  misc.org  my  mypy.ini  plot.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run  setup.py  sql.py  stackexchange.py  test.py  tox.ini  ty.toml  update_cache  with_my  with_my.example
.ci/: run
.circleci/: config.yml
.github/workflows/: main.yml
bluemaestro/: __init__.py  check.py
body/: blood.py
books/kobo/: __init__.py
calls/: __init__.py  __main__.py
coding/: codeforces.py  topcoder.py
commits/: __init__.py  __main__.py  test.py
doc/: .gitignore  CONFIGURING.md  CONFIGURING.org  CONFIGURING.qmd  CONTRIBUTING.org  DENYLIST.md  DESIGN.org  DEVELOPMENT.org  MODULES.org  MODULE_DESIGN.org  OVERLAYS.org  QUERY.md  README.md  README.qmd  SETUP.org  _quarto-preview.yml  _quarto.yml  configuration_requirements.md  configuration_requirements.qmd  configuring_modules.md  configuring_modules.qmd  index.qmd  modules.md  modules.qmd  notes.md  preview_links.lua  quarto_helpers.py  validate_references.py
doc/experiments_with_config/: run
doc/overlays/: install_packages.sh
doc/quarto/: .gitignore  CONFIGURING.md  CONFIGURING.qmd  README.md  README.qmd  _quarto.yml  configuration_requirements.md  configuration_requirements.qmd  configuring_modules.md  configuring_modules.qmd  run  validate_references.py
emfit/: __init__.py  __main__.py
foursquare/: __init__.py  __main__.py
github/: __init__.py  __main__.py
goodreads/: __init__.py  __main__.py
hypothesis/: __init__.py
instapaper/: __init__.py
jawbone_provider/: __init__.py
lastfm/: __init__.py
location/: __init__.py  __main__.py
media/: imdb.py  movies.py  youtube.py
misc/: .flake8-karlicoss  check-twitter.sh  check_legacy_init_py.py  repl.py  rescuetime_cleanup.py
misc/completion/: README.md  generate
my/: __init__.py  __main__.py  _rss.py  activitywatch.py  arbtt.py  bluemaestro.py  cfg.py  codeforces.py  common.py  config.py  demo.py  eightsleep.py  endomondo.py  error.py  fbmessenger.py  feedbin.py  feedly.py  foursquare.py  goodreads.py  hypothesis.py  init.py  instapaper.py  kobo.py  lastfm.py  levelshealth.py  materialistic.py  orgmode.py  pdfs.py  pinboard.py  pocket.py  polar.py  reddit.py  rescuetime.py  roamresearch.py  rss.py  rtm.py  runnerup.py  simple.py  smscalls.py  stackexchange.py  (+10 more)
my/bluemaestro/: __init__.py  check.py
my/body/: blood.py  exercise.py  weight.py
my/books/: kobo.py
my/browser/: active_browser.py  all.py  common.py  export.py
my/bumble/: android.py
my/calendar/: holidays.py
my/coding/: codeforces.py  commits.py  github.py  topcoder.py
my/config/: __init__.py
my/core/: __init__.py  __main__.py  _cpu_pool.py  cachew.py  cfg.py  common.py  compat.py  core_config.py  dataset.py  denylist.py  discovery_pure.py  error.py  experimental.py  freezer.py  hpi_compat.py  influxdb.py  init.py  internal.py  kompress.py  konsume.py  legacy.py  logging.py  mime.py  orgmode.py  pandas.py  preinit.py  pytest.py  query.py  query_cli.py  query_range.py  serialize.py  source.py  sqlite.py  stats.py  structure.py  time.py  types.py  util.py  warnings.py
my/emfit/: __init__.py  plot.py
my/experimental/: destructive_parsing.py
my/fbmessenger/: __init__.py  all.py  android.py  common.py  export.py
my/github/: __init__.py  all.py  common.py  gdpr.py  ghexport.py
my/hackernews/: common.py  dogsheep.py  harmonic.py  materialistic.py
my/instagram/: all.py  android.py  common.py  gdpr.py
my/ip/: all.py  common.py
my/jawbone/: __init__.py  plots.py
my/kython/: README  kerror.py  klogging.py  kompress.py  konsume.py  ktakeout.py
my/lastfm/: __init__.py  fill_influxdb.py
my/location/: __init__.py  __main__.py  all.py  common.py  google.py  google_takeout.py  google_takeout_semantic.py  gpslogger.py  home.py  run  takeout.py  via_ip.py
my/media/: imdb.py  youtube.py
my/monzo/: monzoexport.py
my/mycfg_stub/: __init__.py
my/notes/: orgmode.py
my/photos/: __init__.py  main.py  utils.py
my/reading/: goodreads.py  polar.py
my/reddit/: __init__.py  all.py  common.py  pushshift.py  rexport.py
my/rescuetime/: __init__.py  __main__.py  check
my/rss/: _rss.py  all.py  common.py  feedbin.py  feedly.py
my/stackexchange/: gdpr.py  stexport.py
my/telegram/: telegram_backup.py
my/tests/: bluemaestro.py  calendar.py  commits.py  common.py  conftest.py  pdfs.py  reddit.py  shared_tz_config.py  tz.py
my/tinder/: android.py
my/twitter/: all.py  android.py  archive.py  common.py  talon.py  twint.py
my/util/: hpi_heartbeat.py
my/vk/: all.py  favorites.py  vk_messages_backup.py
my/whatsapp/: android.py
my/youtube/: takeout.py
my/zulip/: organization.py
my_configuration_template/my_configuration/: __init__.py
notes/: __init__.py
photos/: __init__.py  __main__.py
reading/: pdfs.py  polar.py
reddit/: __init__.py  __main__.py
rescuetime/: __init__.py  __main__.py
rtm/: __init__.py
scripts/: release
scripts/ci/: run
src/my/: arbtt.py  bluemaestro.py  cfg.py  codeforces.py  common.py  config.py  demo.py  endomondo.py  error.py  foursquare.py  goodreads.py  hypothesis.py  instapaper.py  kobo.py  lastfm.py  materialistic.py  moves.py  orgmode.py  (+13 more)
tests/: README.org  bluemaestro.py  calendar.py  cli.py  commits.py  common.py  config.py  conftest.py  core.py  demo.py  emfit.py  foursquare.py  get_files.py  github.py  goodreads.py  hypothesis.py  instapaper.py  jawbone.py  lastfm.py  location.py  location_fallback.py  misc.py  orgmode.py  pdfs.py  reddit.py  rtm.py  serialize.py  serialize_simplejson.py  shared_config.py  smscalls.py  sqlite.py  takeout.py  test_import_warnings.sh  test_tmp_config.py  tweets.py  tz.py  youtube.py
tests_misc/: conftest.py  emfit.py  foursquare.py  github.py  goodreads.py  hypothesis.py  instapaper.py  jawbone.py  lastfm.py  orgmode.py  rtm.py  smscalls.py  takeout.py  tweets.py  youtube.py
tweets/: __init__.py
(+220 files in other folders)
